Adicionando suport a HATEOAS à API - foi necessário voltar a versão do Spring pois a depêndencia do HAL deu conflito com o swagger