@@ -1,5 +1,6 @@
 package br.com.fco_romario.loja_ceda_artes.services;
 
+import br.com.fco_romario.loja_ceda_artes.controllers.ClienteController;
 import br.com.fco_romario.loja_ceda_artes.dtos.ClienteDTO;
 import br.com.fco_romario.loja_ceda_artes.domain.Cliente;
 import br.com.fco_romario.loja_ceda_artes.exception.IllegalArgumentException;
@@ -8,6 +9,8 @@ import br.com.fco_romario.loja_ceda_artes.repositories.ClienteRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.linkTo;
+import static org.springframework.hateoas.server.mvc.WebMvcLinkBuilder.methodOn;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -26,14 +29,19 @@ public class ClienteService {
                 .orElseThrow(() -> new ResourceNotFoundException(
                         "Objecto não encontrado id: " + id + ", tipo: " + ClienteDTO.class.getSimpleName()));
 
-        return modelMapper.map(entity, ClienteDTO.class);
+        ClienteDTO dto = modelMapper.map(entity, ClienteDTO.class);
+        adicionaLinksHateoas(dto);
+        return dto;
     }
 
     public List<ClienteDTO> buscarTodos() {
         return clienteRepository.findAll()
                 .stream()
-                .map(cliente -> modelMapper.map(cliente, ClienteDTO.class))
-                .collect(Collectors.toList());
+                .map(cliente -> {
+                    ClienteDTO dto = modelMapper.map(cliente, ClienteDTO.class);
+                    adicionaLinksHateoas(dto);
+                    return  dto;
+                }).toList();
     }
 
     public ClienteDTO criar(ClienteDTO clienteDTO) {
@@ -50,8 +58,10 @@ public class ClienteService {
         if(enderecoComId)
             throw new IllegalArgumentException("Os endereços não devem conter ID na criação do Cliente.");
 
-        Cliente entity = modelMapper.map(clienteDTO, Cliente.class);
-        return modelMapper.map(clienteRepository.save(entity), ClienteDTO.class);
+        Cliente entity = clienteRepository.save(modelMapper.map(clienteDTO, Cliente.class));
+        ClienteDTO dto = modelMapper.map(entity, ClienteDTO.class);
+        adicionaLinksHateoas(dto);
+        return dto;
     }
 
     public ClienteDTO atualizar(ClienteDTO clienteDTO) {
@@ -62,11 +72,21 @@ public class ClienteService {
         entity.setCpfOuCnpj(clienteDTO.getCpfOuCnpj());
         entity.setTipo(clienteDTO.getTipo());
 
-        return modelMapper.map(clienteRepository.save(entity), ClienteDTO.class);
+        ClienteDTO dto = modelMapper.map(clienteRepository.save(entity), ClienteDTO.class);
+        adicionaLinksHateoas(dto);
+        return dto;
     }
 
     public void deletar(Integer id) {
         Cliente entity =  modelMapper.map(buscarPorId(id), Cliente.class);
         clienteRepository.delete(entity);
+    }
+
+    private void adicionaLinksHateoas(ClienteDTO dto) {
+        dto.add(linkTo(methodOn(ClienteController.class).buscarPorId(dto.getId())).withSelfRel().withType("GET"));
+        dto.add(linkTo(methodOn(ClienteController.class).buscarTodos()).withRel("buscarTodos").withType("GET"));
+        dto.add(linkTo(methodOn(ClienteController.class).criar(dto)).withRel("criar").withType("POST"));
+        dto.add(linkTo(methodOn(ClienteController.class).atualizar(dto)).withRel("atualizar").withType("PUT"));
+        dto.add(linkTo(methodOn(ClienteController.class).deletar(dto.getId())).withRel("deletar").withType("DELETE"));
     }
 }
